deployment/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: butterfly-classifier-service
spec:
  selector:
    app: butterfly-classifier
  ports:
    - port: 80
      targetPort: 2005
  type: ClusterIP
