deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: butterfly-classifier-service
spec:
  selector:
    app: butterfly-classifier
  ports:
    - port: 2005
      targetPort: 2005
      nodePort: 32005
  type: NodePort
