deployment/service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: butterfly-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: api.butterfly.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: butterfly-classifier-service
            port:
              number: 80
